--- a/jge-tpl/Cargo.toml
+++ b/jge-tpl/Cargo.toml
@@ -8,3 +8,6 @@ anyhow = "1.0.100"
 jge-core = { version = "0.1.0", path = "../jge-core" }
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 nalgebra = "0.34.1"
+async-trait = "0.1"
+tokio = { version = "1.48.0", features = ["full"] }
+tracing = { version = "0.1.43", features = ["async-await"] }
