--- a/jge-tpl/Cargo.toml
+++ b/jge-tpl/Cargo.toml
@@ -11,3 +11,4 @@ nalgebra = "0.34.1"
 async-trait = "0.1"
 tokio = { version = "1.48.0", features = ["full"] }
 tracing = { version = "0.1.43", features = ["async-await"] }
+winit = "0.30.12"
