--- a/jge-core/Cargo.toml
+++ b/jge-core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = { version = "1.0.100", features = ["backtrace"] }
+backtrace = "0.3"
 tokio = { version = "1.48.0", features = ["full", "tracing"] }
 tracing = { version = "0.1.43", features = ["log"] }
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
