feat: 增加 scene! 宏，简化游戏场景构造

--- a/jge-core/Cargo.toml
+++ b/jge-core/Cargo.toml
@@ -3,6 +3,10 @@ name = "jge-core"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+# 启用后：scene!("...") 的相对路径以“宏调用点源文件目录”为基准（需要 nightly）。
+callsite-relative-paths = ["jge-macros/callsite_relative_paths"]
+
 [dependencies]
 anyhow = { version = "1.0.100", features = ["backtrace"] }
 backtrace = "0.3"
@@ -22,3 +26,4 @@ image = { version = "0.25", default-features = false, features = [
     "jpeg",
 ] }
 inventory = "0.3"
+uuid = { version = "1.11", features = ["v4"] }
