--- a/jge-tpl/Cargo.toml
+++ b/jge-tpl/Cargo.toml
@@ -12,3 +12,4 @@ async-trait = "0.1"
 tokio = { version = "1.48.0", features = ["full"] }
 tracing = { version = "0.1.43", features = ["async-await"] }
 winit = "0.30.12"
+uuid = { version = "1", features = ["v4", "v5"] }
