--- a/jge-core/Cargo.toml
+++ b/jge-core/Cargo.toml
@@ -23,6 +23,9 @@ image = { version = "0.25", default-features = false, features = [
 ] }
 inventory = "0.3"
 uuid = { version = "1.11", features = ["v4"] }
+fontdb = "0.23"
+fontdue = "0.9"
+ttf-parser = "0.25"
 
 [dev-dependencies]
 trybuild = "1.0"
